TFS-226 ParserService added + parser.html

--- a/src/main/resources/static/main/homepage.html
+++ b/src/main/resources/static/main/homepage.html
@@ -105,7 +105,7 @@
             </table>
         </div>
         <div id="parser" class="page" ng-show="dispetcherPages">
-            <h2>тут парсер</h2>
+            <parser></parser>
         </div>
         <div id="settings" class="page">
             <university-settings ng-if="dispetcherPages"></university-settings>
