TFS-231 updateLessonForm.html in process

--- a/src/main/resources/static/main/homepage.html
+++ b/src/main/resources/static/main/homepage.html
@@ -113,7 +113,7 @@
                     <td><update-lesson-form ng-if="profPages"></update-lesson-form></td>
                     <td>
                         <search-view type="dispatcher"></search-view>
-                        <timetable-view ng-if="profPages" type="search"></timetable-view>
+                        <timetable-view ng-if="profPages" type="update"></timetable-view>
                         <info-box ng-if="infoShow"></info-box>
                     </td>
                 </tr>
